#pragma once
#include <SFML/Graphics.hpp>

class Button {
private:

public:

};